Fix site search

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
 <nav role="navigation">
   <ul class="main-navigation">
-    <form action="http://google.es" method="get" class="form-search">
+    <form action="http://google.es/search" method="get" class="form-search">
       <fieldset role="search">
-        <input type="hidden" name="q" value="site:{{ site.url | shorthand_url }}" />
+        <input type="hidden" name="sitesearch" value="codigocomestible.com" />
         <input class="search" type="text" name="q" results="0" placeholder="buscar"/>
       </fieldset>
     </form>
