--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,8 @@
   <meta name="description" content="{{ description | strip_html | condense_spaces | truncate:150 }}">
   {% if page.keywords %}<meta name="keywords" content="{{ page.keywords }}">{% endif %}
 
-  <link href="{{ root_url }}/favicon.png" rel="icon">
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700|Open+Sans' rel='stylesheet' type='text/css'>
-  <link href="{{ root_url }}/stylesheets/comestible.css?v=2" media="screen, projection" rel="stylesheet" type="text/css">
+  <link href="/stylesheets/comestible.css" media="screen, projection" rel="stylesheet" type="text/css">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script src="/javascripts/socialite.min.js"></script>
